--- a/css/main.css
+++ b/css/main.css
@@ -33,6 +33,7 @@ div {
   top: 5px;
   left: 25px;
   bottom: auto;
+  transform: translate(0);
 }
 
 .banner-content h2 {
@@ -45,8 +46,8 @@ div {
   color: white;
   position: absolute;
   transform: none;
-  top: 5px;
-  left: 25px;
+  top: 1px;
+  left: 0;
   bottom: auto;
 }
 
@@ -58,5 +59,10 @@ div {
   font-style: italic;
   position: absolute;
   top: 200px;
-   left: 25px;
+  left: 25px;
+}
+
+p {
+  top: 200px;
+  left: 25px;
 }
