--- a/css/main.css
+++ b/css/main.css
@@ -38,7 +38,7 @@ body {
   text-align: left;
   font-family: "Open Sans", sans-serif;
   font-size: 4rem;
-  font-weight: 700;
+  font-weight: bold;
   background-color: rgba(0, 0, 0, .5);
   color: white;
   display: inline;
